updates the controllers and routes
